--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
+    "chai": "4.0.0",
     "chai-as-promised": "6.0.0",
     "chai-things": "^0.2.0",
     "connect-livereload": "0.6.0",
